# autoshutdown

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: main.rs
src/modules/: commands.rs  mod.rs  zenity.rs
src/utils/: completions.rs  generate_config.rs  get_config.rs  get_user.rs  mod.rs
