[package]
name = "autoshutdown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
clap_complete = "4.4.1"
color-print = "0.3.5"
config = "0.13.1"
sudo = "0.6.0"
system_shutdown = "4.0.1"
